fix: resolve bugs & fix alignment of X icon

--- a/src/components/ui/RemovableArticleTag.css
+++ b/src/components/ui/RemovableArticleTag.css
@@ -12,7 +12,3 @@
   border-radius: 8px;
   cursor: pointer;
 }
-
-.RemovableArticleTag > svg {
-    height: 16px;
-}
